# image_ret

./: .dockerignore  .gitignore  Dockerfile  README.md  architecture.excalidraw.json  config.yaml  docker-compose.yaml  pyproject.toml  setup.sh
notebooks/: inspect_index.ipynb
src/: __init__.py  api.py  feature_extractor.py  image_index.faiss  image_metadata.json  index_and_retrieve.py  retrieval_system.py  segmenter.py
tests/: test_api.py
